Added student input parser function